<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="picker_cancel">Cancel</string>
    <string name="picker_set">OK</string>
    <string name="hours_label">h</string>
    <string name="minutes_label">m</string>
    <string name="seconds_label">s</string>
    <string name="hours_label_description">hours</string>
    <string name="minutes_label_description">minutes</string>
    <string name="seconds_label_description">seconds</string>
    <string name="timer_delete">Delete</string>
    <string name="time_picker_ampm_label">--</string>
    <string name="time_picker_time_seperator">:</string>
    <string name="time_picker_00_label">:00</string>
    <string name="time_picker_30_label">:30</string>
    <string name="number_picker_minus_label">—</string>
    <string name="number_picker_seperator">.</string>
    <string name="number_delete">Delete</string>
    <string name="number_picker_plus_minus">+/-</string>
    <string name="hms_picker_hours_label">H</string>
    <string name="hms_picker_minutes_label">M</string>
    <string name="hms_picker_seconds_label">S</string>
    <string name="expiration_picker_seperator">/</string>
    <string name="month_c">MONTH</string>
    <string name="day_c">DAY</string>
    <string name="year_c">YEAR</string>
    <string name="min_error">Please input a number greater than or equal to %1$s</string>
    <string name="max_error">Please input a number less than or equal to %1$s</string>
    <string name="min_max_error">Please input a number between %1$s and %2$s</string>
    <string name="max_time_error">The time entered lays too far in the future</string>
    <string name="min_time_error">The time entered lays too far in the past</string>
    <string name="done_label">Done</string>
    <string name="hour_picker_description">Hours circular slider</string>
    <string name="minute_picker_description">Minutes circular slider</string>
    <string name="select_hours">Select hours</string>
    <string name="select_minutes">Select minutes</string>
    <string name="day_picker_description">Month grid of days</string>
    <string name="year_picker_description">Year list</string>
    <string name="select_day">Select month and day</string>
    <string name="select_year">Select year</string>
    <string name="item_is_selected">%1$s selected</string>
    <string name="deleted_key">%1$s deleted</string>
    <string name="time_placeholder" translatable="false">--</string>
    <string name="time_separator" translatable="false">:</string>
    <string name="radial_numbers_typeface" translatable="false">sans-serif</string>
    <string name="sans_serif" translatable="false">sans-serif</string>
    <string name="day_of_week_label_typeface" translatable="false">sans-serif</string>
    <string name="recurrence_month_pattern_by_day">on the same day each month</string>
    <string name="recurrence_month_pattern_by_last">on the last day each month</string>
    <string name="acessibility_recurrence_choose_end_date_description">change end date</string>
    <string name="save_label">Done</string>
    <string name="recurrence_end_continously">Forever</string>
    <string name="recurrence_end_date_label">Until a date</string>
    <string name="recurrence_end_date">Until <xliff:g id="date">%s</xliff:g></string>
    <string name="recurrence_end_count_label">For a number of events</string>
    <plurals name="recurrence_interval_hourly">
        
        <item quantity="one">Every <xliff:g id="count">%d</xliff:g> hour</item>
        
        <item quantity="other">Every <xliff:g id="count">%d</xliff:g> hours</item>
    </plurals>
    <plurals name="recurrence_interval_daily">
        
        <item quantity="one">Every <xliff:g id="count">%d</xliff:g> day</item>
        
        <item quantity="other">Every <xliff:g id="count">%d</xliff:g> days</item>
    </plurals>
    <plurals name="recurrence_interval_weekly">
        
        <item quantity="one">Every <xliff:g id="count">%d</xliff:g> week</item>
        
        <item quantity="other">Every <xliff:g id="count">%d</xliff:g> weeks</item>
    </plurals>
    <plurals name="recurrence_interval_monthly">
        
        <item quantity="one">Every <xliff:g id="count">%d</xliff:g> month</item>
        
        <item quantity="other">Every <xliff:g id="count">%d</xliff:g> months</item>
    </plurals>
    <plurals name="recurrence_interval_yearly">
        
        <item quantity="one">Every <xliff:g id="count">%d</xliff:g> year</item>
        
        <item quantity="other">Every <xliff:g id="count">%d</xliff:g> years</item>
    </plurals>
    <plurals name="recurrence_end_count">
        <item quantity="one">For <xliff:g id="event_count">%d</xliff:g> event</item>
        <item quantity="other">For <xliff:g id="event_count">%d</xliff:g> events</item>
    </plurals>
    <string name="endByDate">; until <xliff:g id="date">%s</xliff:g></string>
    <plurals name="endByCount">
        <item quantity="one">; for one time</item>
        <item quantity="other">; for <xliff:g id="number">%d</xliff:g> times</item>
    </plurals>
    <plurals name="hourly">
        <item quantity="one">Hourly</item>
        <item quantity="other">Every <xliff:g id="number">%d</xliff:g> hours</item>
    </plurals>
    <plurals name="daily">
        <item quantity="one">Daily</item>
        <item quantity="other">Every <xliff:g id="number">%d</xliff:g> days</item>
    </plurals>
    <string name="every_weekday">"Every weekday (Mon\u2013Fri)"</string>
    <plurals name="weekly">
        <item quantity="one">Weekly on <xliff:g id="days_of_week">%2$s</xliff:g></item>
        <item quantity="other">Every <xliff:g id="number">%1$d</xliff:g> weeks on <xliff:g id="days_of_week">%2$s</xliff:g></item>
    </plurals>
    <plurals name="monthly">
        <item quantity="one">Monthly <xliff:g id="days_of_month">%2$s</xliff:g></item>
        <item quantity="other">Every <xliff:g id="number">%1$d</xliff:g> months <xliff:g id="days_of_month">%2$s</xliff:g></item>
    </plurals>
    <string name="monthly_last_day">on the last day</string>
    <plurals name="yearly_plain">
        <item quantity="one">Yearly <xliff:g id="days_of_month">%2$s</xliff:g></item>
        <item quantity="other">Every <xliff:g id="number">%1$d</xliff:g> years <xliff:g id="days_of_month">%2$s</xliff:g></item>
    </plurals>
    <string name="hint_time_zone_search">Type country name</string>
    <string name="searchview_description_clear">Clear query</string>
    <string name="no_results_found">No results found</string>
    <string name="palestine_display_name">Palestine</string>
    <string name="switch_on">ON</string>
    <string name="switch_off">OFF</string>
</resources>