<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
        <com.doomonafireball.betterpickers.hmspicker.HmsView
                android:id="@+id/hms_text"
                android:layout_width="0dip"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/medium_font_padding"
                android:paddingBottom="@dimen/medium_font_padding"
                android:paddingLeft="@dimen/timer_padding_left"
                android:layout_gravity="center"
                android:baselineAligned="false"
                android:gravity="top">
            <com.doomonafireball.betterpickers.widget.ZeroTopPaddingTextView
                    android:id="@+id/hours_ones"
                    android:singleLine="true"
                    android:ellipsize="none"
                    style="@style/medium_bold_hms"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>
            <com.doomonafireball.betterpickers.widget.ZeroTopPaddingTextView
                    android:id="@+id/hours_label"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:ellipsize="none"
                    style="@style/label"
                    android:gravity="top"
                    android:text="@string/hms_picker_hours_label"/>
            <com.doomonafireball.betterpickers.widget.ZeroTopPaddingTextView
                    android:id="@+id/minutes_tens"
                    android:singleLine="true"
                    android:ellipsize="none"
                    style="@style/medium_bold_hms"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>
            <com.doomonafireball.betterpickers.widget.ZeroTopPaddingTextView
                    android:id="@+id/minutes_ones"
                    android:singleLine="true"
                    android:ellipsize="none"
                    style="@style/medium_bold_hms"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>
            <com.doomonafireball.betterpickers.widget.ZeroTopPaddingTextView
                    android:id="@+id/minutes_label"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:ellipsize="none"
                    style="@style/label"
                    android:gravity="top"
                    android:text="@string/hms_picker_minutes_label"/>
            <com.doomonafireball.betterpickers.widget.ZeroTopPaddingTextView
                    android:id="@+id/seconds_tens"
                    android:singleLine="true"
                    android:ellipsize="none"
                    style="@style/medium_light_hms"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>
            <com.doomonafireball.betterpickers.widget.ZeroTopPaddingTextView
                    android:id="@+id/seconds_ones"
                    android:singleLine="true"
                    android:ellipsize="none"
                    style="@style/medium_light_hms"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>
            <com.doomonafireball.betterpickers.widget.ZeroTopPaddingTextView
                    android:id="@+id/seconds_label"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:ellipsize="none"
                    style="@style/label"
                    android:gravity="top"
                    android:text="@string/hms_picker_seconds_label"/>
        </com.doomonafireball.betterpickers.hmspicker.HmsView>
        <ImageButton
                android:id="@+id/delete"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="center"
                android:src="@drawable/ic_backspace_dark"
                android:background="@drawable/key_background_dark"
                android:contentDescription="@string/timer_delete"
                android:layout_height="match_parent"/>
    </LinearLayout>
    <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="@color/default_divider_color_dark"/>
    <include
            layout="@layout/three_keys_view"
            android:id="@+id/first"/>
    <include
            layout="@layout/three_keys_view"
            android:id="@+id/second"/>
    <include
            layout="@layout/three_keys_view"
            android:id="@+id/third"/>
    <include
            layout="@layout/three_keys_view"
            android:id="@+id/fourth"/>
</LinearLayout>
