<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
        <com.codetroopers.betterpickers.timepicker.TimerView
                android:id="@+id/timer_time_text"
                android:layout_width="0dip"
                android:layout_weight="2"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/medium_font_padding"
                android:paddingBottom="@dimen/medium_font_padding"
                android:paddingLeft="@dimen/timer_padding_left"
                android:layout_gravity="center"
                android:baselineAligned="false"
                android:gravity="top">
            <com.codetroopers.betterpickers.widget.ZeroTopPaddingTextView
                    android:id="@+id/hours_tens"
                    android:singleLine="true"
                    android:ellipsize="none"
                    style="@style/medium_bold"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>
            <com.codetroopers.betterpickers.widget.ZeroTopPaddingTextView
                    android:id="@+id/hours_ones"
                    android:singleLine="true"
                    android:ellipsize="none"
                    style="@style/medium_bold"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>
            <com.codetroopers.betterpickers.widget.ZeroTopPaddingTextView
                    android:id="@+id/hours_seperator"
                    android:singleLine="true"
                    android:ellipsize="none"
                    style="@style/medium_light"
                    android:text="@string/time_picker_time_seperator"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>
            <com.codetroopers.betterpickers.widget.ZeroTopPaddingTextView
                    android:id="@+id/minutes_tens"
                    android:singleLine="true"
                    android:ellipsize="none"
                    style="@style/medium_bold"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>
            <com.codetroopers.betterpickers.widget.ZeroTopPaddingTextView
                    android:id="@+id/minutes_ones"
                    android:singleLine="true"
                    android:ellipsize="none"
                    style="@style/medium_bold"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"/>
            <com.codetroopers.betterpickers.widget.ZeroTopPaddingTextView
                    android:id="@+id/ampm_label"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:ellipsize="none"
                    style="@style/label"
                    android:gravity="top"
                    android:text="@string/time_picker_ampm_label"/>
        </com.codetroopers.betterpickers.timepicker.TimerView>
        <ImageButton
                android:id="@+id/delete"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="center"
                android:src="@drawable/ic_backspace_dark"
                android:background="@drawable/key_background_dark"
                android:contentDescription="@string/timer_delete"
                android:layout_height="match_parent"/>
    </LinearLayout>
    <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="@color/default_divider_color_dark"/>
    <include
            layout="@layout/three_keys_view"
            android:id="@+id/first"/>
    <include
            layout="@layout/three_keys_view"
            android:id="@+id/second"/>
    <include
            layout="@layout/three_keys_view"
            android:id="@+id/third"/>
    <include
            layout="@layout/three_keys_view_leftright"
            android:id="@+id/fourth"/>
</LinearLayout>
