<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
            android:id="@+id/number_view_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
        <com.doomonafireball.betterpickers.widget.AutoScrollHorizontalScrollView
                android:id="@+id/horizontal_scroll_view"
                android:layout_width="0dip"
                android:layout_weight="2"
                android:layout_height="wrap_content">
            <com.doomonafireball.betterpickers.numberpicker.NumberView
                    android:id="@+id/number_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/medium_font_padding"
                    android:paddingBottom="@dimen/medium_font_padding"
                    android:paddingLeft="@dimen/timer_padding_left"
                    android:layout_gravity="left"
                    android:baselineAligned="false"
                    android:gravity="top">
                <com.doomonafireball.betterpickers.widget.ZeroTopPaddingTextView
                        android:id="@+id/number"
                        android:singleLine="true"
                        android:ellipsize="none"
                        style="@style/medium_bold"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"/>
                <com.doomonafireball.betterpickers.widget.ZeroTopPaddingTextView
                        android:id="@+id/decimal_separator"
                        android:singleLine="true"
                        android:ellipsize="none"
                        style="@style/medium_light"
                        android:text="@string/number_picker_seperator"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"/>
                <com.doomonafireball.betterpickers.widget.ZeroTopPaddingTextView
                        android:id="@+id/decimal"
                        android:singleLine="true"
                        android:ellipsize="none"
                        style="@style/medium_bold"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"/>
                <com.doomonafireball.betterpickers.widget.ZeroTopPaddingTextView
                        android:id="@+id/label"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:singleLine="true"
                        android:ellipsize="none"
                        style="@style/label"
                        android:gravity="top"/>
                <com.doomonafireball.betterpickers.widget.ZeroTopPaddingTextView
                        android:id="@+id/minus_label"
                        android:layout_height="wrap_content"
                        android:layout_width="wrap_content"
                        android:singleLine="true"
                        android:ellipsize="none"
                        style="@style/label"
                        android:gravity="top"
                        android:text="@string/number_picker_minus_label"/>
            </com.doomonafireball.betterpickers.numberpicker.NumberView>
        </com.doomonafireball.betterpickers.widget.AutoScrollHorizontalScrollView>
        <ImageButton
                android:id="@+id/delete"
                android:layout_width="0dip"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_gravity="center"
                android:src="@drawable/ic_backspace_dark"
                android:background="@drawable/key_background_dark"
                android:contentDescription="@string/number_delete"
                android:layout_height="match_parent"/>
    </LinearLayout>
    <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_below="@id/number_view_container"
            android:background="@color/default_divider_color_dark"/>
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider"
            android:orientation="vertical">
        <include
                layout="@layout/three_keys_view"
                android:id="@+id/first"/>
        <include
                layout="@layout/three_keys_view"
                android:id="@+id/second"/>
        <include
                layout="@layout/three_keys_view"
                android:id="@+id/third"/>
        <include
                layout="@layout/three_keys_view_leftright"
                android:id="@+id/fourth"/>
    </LinearLayout>
    <com.doomonafireball.betterpickers.numberpicker.NumberPickerErrorTextView
            android:id="@+id/error"
            android:visibility="invisible"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/divider"
            android:gravity="center_horizontal"
            android:background="#ffff4444"
            android:textColor="#ffffffff"
            android:textStyle="bold"/>
</RelativeLayout>
